apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.noynto.me
      secretName: vaultwarden-tls
  rules:
    - host: vault.noynto.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
